# Minecraft-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/core/: Game.h  InputHandler.h  Renderer.h  Window.h
include/logmanager/: logger.h
src/core/: Game.cpp  InputHandler.cpp  Renderer.cpp  Window.cpp
src/logmanager/: logger.cpp
